# rust-3d

./: .gitignore  .rustfmt.toml  BUGS  Cargo.toml  LICENSE  README  README.md  TODO  format-code.sh
benches/: benchmarks.rs
src/: aa_bb_tree_2d.rs  aa_bb_tree_3d.rs  bounding_box_2d.rs  bounding_box_3d.rs  box_2d.rs  box_3d.rs  box_unaligned_3d.rs  circle.rs  cluster.rs  cluster_vertices.rs  collider_3d.rs  compressedPoint.rs  compressedPoint3D.rs  compressedPointCloud.rs  compressedPointCloud3D.rs  compressed_point_3d.rs  compressed_point_cloud_3d.rs  convex_hull_2d.rs  distances_2d.rs  distances_3d.rs  distances_nd.rs  douglas_peucker_2d.rs  dynamic_precision_index_vec.rs  enums.rs  face3.rs  factory_2d.rs  filter_all.rs  filter_all_random_accessible.rs  filter_allow.rs  filter_and.rs  filter_and_2d.rs  filter_and_3d.rs  filter_and_pc_2d.rs  filter_and_pc_3d.rs  filter_any.rs  filter_any_3d.rs  filter_any_pc_2d.rs  filter_any_pc_3d.rs  filter_any_random_accessible.rs  filter_box_2d.rs  (+151 more)
src/algorithms/: cluster_vertices.rs  convex_hull_2d.rs  douglas_peucker_2d.rs  heal_mesh.rs  mod.rs  subdivide.rs  unify_faces.rs
src/filters/: filter_all_2d.rs  filter_all_3d.rs  filter_all_pc_2d.rs  filter_all_pc_3d.rs  (+27 more)
tests/: bounding_box_2d_test.rs  bounding_box_3d_test.rs  convex_hull_2d_test.rs  filter_box_2d_test.rs  filter_box_3d_test.rs  filter_circle_2d_test.rs  filter_circle_test.rs  filter_negate_2d_test.rs  filter_negate_3d_test.rs  filter_pc_2d_test.rs  filter_pc_3d_test.rs  filter_sphere_test.rs  filters_2d_test.rs  filters_3d_test.rs  filters_combinators.rs  interpolation_2d_test.rs  mesh_io_test.rs  mesh_test.rs  point_2d_test.rs  point_3d_test.rs  point_cloud_2d_io_test.rs  point_cloud_2d_test.rs  point_cloud_3d_io_test.rs  point_cloud_3d_test.rs
(+170 files in other folders)
