[package]
name = "rust-3d"
version = "0.30.0"
authors = ["Martin Buck <buckmartin@buckmartin.de>"]
description = "2D/3D library written in rust"
documentation = "https://docs.rs/rust-3d/"
homepage = "https://github.com/I3ck/rust-3d"
repository = "https://github.com/I3ck/rust-3d"
readme = "README.md"
keywords = ["2d", "3d", "pointcloud", "mesh", "filters"]
categories = ["algorithms", "data-structures", "mathematics"]
license = "MIT"
edition = "2018"

exclude = [
    ".gitignore",
    "BUGS",
    "TODO",
    "format-code.sh",
]

[dependencies]
num = "0.2.0"
byteorder = "1.3.2"
bitvec = "0.16.0"
fnv = "1.0.6"

